Working state, refactoring to Vanilla based pipeline.