@@ -1,11 +1,8 @@
 package net.minecraftforge.gradle.common.tasks;
 
 import net.minecraftforge.gradle.common.extensions.ArtifactDownloaderExtension;
-import org.gradle.api.DefaultTask;
 import org.gradle.api.provider.Provider;
 import org.gradle.api.tasks.Internal;
-
-import java.io.File;
 
 public abstract class DownloadingTask extends ForgeGradleBaseTask {
     @Internal
@@ -13,8 +10,7 @@ public abstract class DownloadingTask extends ForgeGradleBaseTask {
         return getProject().provider(() -> getProject().getExtensions().getByType(ArtifactDownloaderExtension.class));
     }
 
-    @Internal
     public final Provider<String> getProjectFileName(final String postFix) {
-        return getProject().provider(() -> "%s_%s_%s".formatted(getProject().getName().replace(":", "_"), getName(), postFix));
+        return getProject().provider(() -> String.format("%s_%s_%s", getProject().getName().replace(":", "_"), getName(), postFix));
     }
 }
