@@ -26,7 +26,7 @@ public abstract class RawAndSourceCombiner extends ForgeGradleBaseTask {
         try {
             Files.copy(input, output);
         } catch (IOException e) {
-            throw new RuntimeException("Failed to copy: %s to output: %s".formatted(input.getAbsolutePath(), output.getAbsolutePath()), e);
+            throw new RuntimeException(String.format("Failed to copy: %s to output: %s", input.getAbsolutePath(), output.getAbsolutePath()), e);
         }
     }
 
