@@ -1,7 +1,7 @@
 package net.minecraftforge.gradle.mcp.runtime.tasks;
 
 import net.minecraftforge.gradle.common.tasks.JavaRuntimeTask;
-import net.minecraftforge.gradle.common.util.FileWrapper;
+import net.minecraftforge.gradle.common.util.ArtifactSide;
 import org.gradle.api.file.Directory;
 import org.gradle.api.provider.MapProperty;
 import org.gradle.api.provider.Provider;
@@ -17,7 +17,7 @@ public abstract class McpRuntime extends JavaRuntimeTask implements IMcpRuntimeT
     public McpRuntime() {
         super();
 
-        //All of these tasks belong to the MCP group
+        //All of these taskOutputs belong to the MCP group
         setGroup("mcp");
 
         //Sets up the base configuration for directories and outputs.
@@ -27,12 +27,12 @@ public abstract class McpRuntime extends JavaRuntimeTask implements IMcpRuntimeT
 
         //And configure output default locations.
         getOutputDirectory().convention(getStepsDirectory().flatMap(d -> getStepName().map(d::dir)));
-        getOutputFileName().convention(getArguments().map(arguments -> "output.%s".formatted(arguments.getOrDefault("outputExtension", "jar"))));
+        getOutputFileName().convention(getArguments().flatMap(arguments -> arguments.getOrDefault("outputExtension", getProject().provider(() -> "jar")).map(extension -> String.format("output.%s", extension))));
         getOutput().convention(getOutputDirectory().flatMap(d -> getOutputFileName().map(d::file)));
 
         //Configure the default runtime data map:
         getRuntimeArguments().convention(getArguments().map(arguments -> {
-            final Map<String, Object> result = new HashMap<>(arguments);
+            final Map<String, Provider<String>> result = new HashMap<>(arguments);
             buildRuntimeArguments(result);
             return result;
         }));
@@ -44,12 +44,10 @@ public abstract class McpRuntime extends JavaRuntimeTask implements IMcpRuntimeT
         }));
     }
 
-    @Internal
     protected Provider<File> getFileInOutputDirectory(final String fileName) {
         return getOutputDirectory().map(directory -> directory.file(fileName).getAsFile());
     }
 
-    @Internal
     protected Provider<File> getFileInOutputDirectory(final Provider<String> fileName) {
         return getOutputDirectory().flatMap(directory -> fileName.map(f -> directory.file(f).getAsFile()));
     }
@@ -58,19 +56,19 @@ public abstract class McpRuntime extends JavaRuntimeTask implements IMcpRuntimeT
     public abstract MapProperty<String, File> getRuntimeData();
 
     @Internal
-    public abstract MapProperty<String, Object> getRuntimeArguments();
+    public abstract MapProperty<String, Provider<String>> getRuntimeArguments();
 
-    protected void buildRuntimeArguments(final Map<String, Object> arguments) {
-        arguments.computeIfAbsent("output", key -> getOutput().get().getAsFile().getAbsolutePath());
-        arguments.computeIfAbsent("outputDir", key -> getOutputDirectory().get().getAsFile().getAbsolutePath());
-        arguments.computeIfAbsent("outputExtension", key -> getOutputFileName().get().substring(getOutputFileName().get().lastIndexOf('.') + 1));
-        arguments.computeIfAbsent("outputFileName", key -> getOutputFileName().get());
-        arguments.computeIfAbsent("mcpDir", key -> getMcpDirectory().get().getAsFile().getAbsolutePath());
-        arguments.computeIfAbsent("unpackedMcpZip", key -> getUnpackedMcpZipDirectory().get().getAsFile().getAbsolutePath());
-        arguments.computeIfAbsent("stepsDir", key -> getStepsDirectory().get().getAsFile().getAbsolutePath());
-        arguments.computeIfAbsent("stepName", key -> getStepName().get());
-        arguments.computeIfAbsent("side", key -> getDistribution().get());
-        arguments.computeIfAbsent("minecraftVersion", key -> getMinecraftVersion().get().toString());
-        arguments.computeIfAbsent("javaVersion", key -> getJavaVersion().get().toString());
+    protected void buildRuntimeArguments(final Map<String, Provider<String>> arguments) {
+        arguments.computeIfAbsent("output", key -> newProvider(getOutput().get().getAsFile().getAbsolutePath()));
+        arguments.computeIfAbsent("outputDir", key -> newProvider(getOutputDirectory().get().getAsFile().getAbsolutePath()));
+        arguments.computeIfAbsent("outputExtension", key -> newProvider(getOutputFileName().get().substring(getOutputFileName().get().lastIndexOf('.') + 1)));
+        arguments.computeIfAbsent("outputFileName", key -> newProvider(getOutputFileName().get()));
+        arguments.computeIfAbsent("mcpDir", key -> newProvider(getMcpDirectory().get().getAsFile().getAbsolutePath()));
+        arguments.computeIfAbsent("unpackedMcpZip", key -> newProvider(getUnpackedMcpZipDirectory().get().getAsFile().getAbsolutePath()));
+        arguments.computeIfAbsent("stepsDir", key -> newProvider(getStepsDirectory().get().getAsFile().getAbsolutePath()));
+        arguments.computeIfAbsent("stepName", key -> getStepName());
+        arguments.computeIfAbsent("side", key -> getDistribution().map(ArtifactSide::getName));
+        arguments.computeIfAbsent("minecraftVersion", key -> getMinecraftVersion().map(Object::toString));
+        arguments.computeIfAbsent("javaVersion", key -> getRuntimeJavaLauncher().map(launcher -> launcher.getMetadata().getLanguageVersion().toString()));
     }
 }
